# tinyJSON

./: .clang-format  CMakeLists.txt  README.md  build.sh  test.cpp  tinyjson.cpp  tinyjson.h
